--- a/main.css
+++ b/main.css
@@ -9,7 +9,80 @@ header{
     user-select:none;
 }
 
-header+button,header+button+button{
+.container>header~button{
     width:100%;
     margin:5px 0;
+}
+
+
+.rwd-table {
+    background: #fff;
+    overflow: hidden;
+}
+
+.rwd-table tr:nth-of-type(2n) {
+    background: #efefef;
+}
+
+.rwd-table th,
+.rwd-table td {
+    margin: 0.5em 1em;
+    
+}
+
+.rwd-table {
+    min-width: 100%;
+}
+
+.rwd-table th {
+    display: none;
+}
+
+.rwd-table td {
+    display: block;
+}
+
+.rwd-table td:before {
+    content: attr(data-th) " : ";
+    font-weight: bold;
+    width: 6.5em;
+    display: inline-block;
+}
+
+.rwd-table th,
+.rwd-table td {
+    text-align: left;
+}
+
+.rwd-table th,
+.rwd-table td:before {
+    color: #D20B2A;
+    font-weight: bold;
+}
+
+@media (min-width: 480px) {
+    .rwd-table td:before {
+        display: none;
+    }
+    .rwd-table th,
+    .rwd-table td {
+        display: table-cell;
+        padding: 0.25em 0.5em;
+    }
+    .rwd-table th:first-child,
+    .rwd-table td:first-child {
+        padding-left: 0;
+    }
+    .rwd-table th:last-child,
+    .rwd-table td:last-child {
+        padding-right: 0;
+    }
+    .rwd-table th,
+    .rwd-table td {
+        padding: 1em !important;
+    }
+    .rwd-table th,
+    .rwd-table td {
+        text-align: center ;
+    }
 }
