--- a/main.css
+++ b/main.css
@@ -1,22 +1,23 @@
-body{
-    user-select:none;
+body {
+    user-select: none;
 }
-header{
-    text-align:center;
-    height:35px;
-    line-height:35px;
+
+header {
+    text-align: center;
+    height: 35px;
+    line-height: 35px;
     font-size: 25px;
-    background:#39f;
-    border-radius:5px;
-    color:#fff;
-    user-select:none;
+    background: #39f;
+    border-radius: 5px;
+    color: #fff;
+    user-select: none;
 }
 
-.container>header~.btn{
-    width:100%;
-    margin:5px 0;
+.container>header~.btn,
+.fill {
+    width: 100%;
+    margin: 5px 0;
 }
-
 
 .rwd-table {
     background: #fff;
@@ -30,7 +31,6 @@ header{
 .rwd-table th,
 .rwd-table td {
     margin: 0.5em 1em;
-    
 }
 
 .rwd-table {
@@ -86,6 +86,6 @@ header{
     }
     .rwd-table th,
     .rwd-table td {
-        text-align: center ;
+        text-align: center;
     }
 }
